crates/pera/tests/snapshots/ptb_files_tests__gas_outside_range.ptb.snap
---
source: crates/pera/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --gas-budget 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF 
   ·              ─────────────────────────────────────┬────────────────────────────────────
   ·                                                   ╰── Invalid integer literal
   ╰────

